Added license and description for root crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ repository = "https://github.com/hxyulin/hadris"
 homepage = "https://github.com/hxyulin/hadris"
 
 [workspace.dependencies]
-hadris-core = { path = "crates/hadris-core" }
-hadris-fat = { path = "crates/hadris-fat" }
+hadris-core = { path = "crates/hadris-core", version = "0.1.0" }
+hadris-fat = { path = "crates/hadris-fat", version = "0.1.0" }
