--- a/crates/hadris/Cargo.toml
+++ b/crates/hadris/Cargo.toml
@@ -3,6 +3,8 @@ name = "hadris"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
+description = "A filesystem library fully written in Rust"
+license.workspace = true
 
 [features]
 default = ["fat", "write"]
