--- a/crates/hadris-cli/Cargo.toml
+++ b/crates/hadris-cli/Cargo.toml
@@ -10,4 +10,4 @@ homepage.workspace = true
 [dependencies]
 clap = { version = "4.5.29", features = ["derive"] }
 clio = { version = "0.3.5", features = ["clap-parse"] }
-hadris = { path = "../hadris" }
+hadris = { workspace = true }
