--- a/crates/hadris-cli/Cargo.toml
+++ b/crates/hadris-cli/Cargo.toml
@@ -7,7 +7,19 @@ authors.workspace = true
 repository.workspace = true
 homepage.workspace = true
 
+[[bin]]
+name = "hadris"
+path = "src/main.rs"
+
+[features]
+default = ["profiling"]
+profiling = ["pprof", "tracing", "tracing-subscriber"]
+
 [dependencies]
+atty = "0.2.14"
 clap = { version = "4.5.29", features = ["derive"] }
-clio = { version = "0.3.5", features = ["clap-parse"] }
+tracing = { workspace = true, optional = true }
+tracing-subscriber = { workspace = true, optional = true }
+pprof = { workspace = true, optional = true }
+
 hadris = { workspace = true }
