--- a/crates/hadris/Cargo.toml
+++ b/crates/hadris/Cargo.toml
@@ -14,5 +14,5 @@ std = ["alloc", "hadris-core/std", "hadris-fat/std"]
 write = ["hadris-fat/write"]
 
 [dependencies]
-hadris-core = { workspace = true }
-hadris-fat = { workspace = true, optional = true }
+hadris-core = { workspace = true, features = ["std"] }
+hadris-fat = { workspace = true, optional = true, features = ["std"] }
