--- a/crates/hadris-cli/Cargo.toml
+++ b/crates/hadris-cli/Cargo.toml
@@ -12,14 +12,10 @@ name = "hadris"
 path = "src/main.rs"
 
 [features]
-default = ["profiling"]
-profiling = ["pprof", "tracing", "tracing-subscriber"]
+default = []
 
 [dependencies]
 atty = "0.2.14"
 clap = { version = "4.5.29", features = ["derive"] }
-tracing = { workspace = true, optional = true }
-tracing-subscriber = { workspace = true, optional = true }
-pprof = { workspace = true, optional = true }
 
 hadris = { workspace = true }
