--- a/crates/hadris-cli/Cargo.toml
+++ b/crates/hadris-cli/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "hadris-cli"
 readme = "README.md"
+description = "A command-line interface for Hadris"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
