--- a/crates/hadris-fat/Cargo.toml
+++ b/crates/hadris-fat/Cargo.toml
@@ -19,11 +19,12 @@ lfn = []
 [dependencies]
 hadris-core = { workspace = true, default-features = false }
 
+
 bitflags = { workspace = true }
 bytemuck = { version = "1.21.0", default-features = false, features = [
     "derive",
 ] }
-chrono = { version = "0.4.39", default-features = false }
+chrono = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
