--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ hadris-fat = { path = "crates/hadris-fat", version = "0.1.1", default-features =
 
 chrono = { version = "0.4.39", default-features = false }
 bitflags = "2.8.0"
+thiserror = { version = "2.0.12", default-features = false }
