--- a/crates/hadris-common/Cargo.toml
+++ b/crates/hadris-common/Cargo.toml
@@ -15,3 +15,4 @@ bytemuck = ["dep:bytemuck"]
 
 [dependencies]
 bytemuck = { workspace = true, optional = true, features = ["derive"] }
+crc32fast = "1.4.2"
