[FEAT]: Visible boot catalogue and GPT Implemented visible boot catalogue using file (boot.catalog) backed Boot Catalogue and Guid Partition Table support, including debugging entries when reading, and verifying checksums.

--- a/crates/hadris-common/Cargo.toml
+++ b/crates/hadris-common/Cargo.toml
@@ -15,4 +15,6 @@ bytemuck = ["dep:bytemuck"]
 
 [dependencies]
 bytemuck = { workspace = true, optional = true, features = ["derive"] }
-crc32fast = "1.4.2"
+chrono = "0.4.40"
+crc = "3.2.1"
+rand = "0.9.0"
