--- a/crates/hadris-common/Cargo.toml
+++ b/crates/hadris-common/Cargo.toml
@@ -18,3 +18,6 @@ bytemuck = { workspace = true, optional = true, features = ["derive"] }
 chrono = "0.4.40"
 crc = "3.2.1"
 rand = "0.9.0"
+
+[dev-dependencies]
+criterion.workspace = true
