--- a/crates/hadris-iso/Cargo.toml
+++ b/crates/hadris-iso/Cargo.toml
@@ -11,20 +11,23 @@ keywords = ["el-torito", "iso", "iso9660", "cd", "dvd"]
 categories = ["filesystem", "encoding"]
 
 [features]
-default = ["el-torito", "extra-checks"]
+default = ["std", "el-torito", "rock-ridge-full", "extra-checks"]
+std = ["hadris-io/std"]
 el-torito = []
 extra-checks = []
+rock-ridge-full = []
 
 [dependencies]
 bitflags = { workspace = true, features = ["bytemuck"] }
 bytemuck = { workspace = true, features = ["derive"] }
 log.workspace = true
+thiserror.workspace = true
 
 chrono = "0.4.40"
-tempfile = "3.19.1"
-thiserror = "2.0.12"
 
+hadris-io = { workspace = true }
 hadris-common = { workspace = true }
 
 [dev-dependencies]
 static_assertions.workspace = true
+tempfile.workspace = true
